--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -8,7 +8,7 @@
             android:id="@+id/imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@color/colorAccent"
+            android:padding="20dp"
             android:layout_gravity="center_horizontal"/>
 
     <TextView
