--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -6,9 +6,8 @@
 
     <ImageView
             android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:padding="20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_horizontal"/>
 
     <TextView
@@ -16,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/app_name"
-            android:textAllCaps="true"/>
+            android:layout_marginBottom="20dp"
+            android:text="@string/app_name"/>
+
 
 </LinearLayout>
