--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -5,5 +5,9 @@
             app:startDestination="@id/pokedexFragment">
 
     <fragment android:id="@+id/pokedexFragment" android:name="com.valid.pokeapp.views.PokedexFragment"
-              android:label="fragment_pokedex" tools:layout="@layout/fragment_pokedex"/>
+              android:label="fragment_pokedex" tools:layout="@layout/fragment_pokedex">
+        <action android:id="@+id/action_pokedexFragment_to_detailFragment" app:destination="@id/detailFragment"/>
+    </fragment>
+    <fragment android:id="@+id/detailFragment" android:name="com.valid.pokeapp.views.DetailFragment"
+              android:label="fragment_detail" tools:layout="@layout/fragment_detail"/>
 </navigation>
