--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,8 +6,9 @@
 
     <fragment android:id="@+id/pokedexFragment" android:name="com.valid.pokeapp.views.PokedexFragment"
               android:label="fragment_pokedex" tools:layout="@layout/fragment_pokedex">
-        <action android:id="@+id/action_pokedexFragment_to_detailFragment" app:destination="@id/detailFragment"/>
+        <action android:id="@+id/toPokemon" app:destination="@+id/pokemonFragment"
+                app:enterAnim="@anim/nav_default_pop_enter_anim"/>
     </fragment>
-    <fragment android:id="@+id/detailFragment" android:name="com.valid.pokeapp.views.PokemonFragment"
-              android:label="fragment_detail" tools:layout="@layout/fragment_pokemon"/>
+    <fragment android:id="@+id/pokemonFragment" android:name="com.valid.pokeapp.views.PokemonFragment"
+              android:label="fragment_pokemon" tools:layout="@layout/fragment_pokemon"/>
 </navigation>
