--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -4,7 +4,6 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".views.PokemonFragment">
-
     <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                   android:orientation="vertical">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -30,6 +29,7 @@
                             android:layout_gravity="end"
                             android:textAlignment="viewEnd"
                             android:textStyle="bold"
+                            android:text="@{pokemon.a}"
                             android:paddingRight="10dp"
                             android:textSize="16sp"/>
                 </LinearLayout>
