--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -1,140 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".views.PokemonFragment">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
-                  android:orientation="vertical">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:orientation="horizontal"
-        android:gravity="center_vertical">
-            <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="200dp" android:layout_height="200dp"/>
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="vertical">
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorHp">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/hp"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvHp"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:textStyle="bold"
-                            android:text="@{pokemon.a}"
-                            android:paddingRight="10dp"
-                            android:textSize="16sp"/>
-                </LinearLayout>
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorAttack">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/attack"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvAttack"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:paddingRight="10dp"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                </LinearLayout>
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorDefense">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/defense"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvDefense"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:paddingRight="10dp"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                </LinearLayout>
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorSpAtk">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/sp_atk"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvSpAtk"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:paddingRight="10dp"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                </LinearLayout>
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorSpDef">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/sp_def"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvSpDef"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:paddingRight="10dp"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                </LinearLayout>
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:orientation="horizontal"
-                              android:background="@color/colorSpeed">
-                    <TextView
-                            android:layout_width="80dp" android:layout_height="wrap_content"
-                            android:text="@string/speed"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                    <TextView
-                            android:id="@+id/tvSpeed"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:textAlignment="viewEnd"
-                            android:paddingRight="10dp"
-                            android:textStyle="bold"
-                            android:textSize="16sp"/>
-                </LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="@android:color/white"
+              tools:context=".views.PokemonFragment">
 
-            </LinearLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+        <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:baselineAligned="false">
+            <ListView
+                    android:id="@+id/lvStatsLeft"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:divider="@null"/>
+            <ListView
+                    android:id="@+id/lvStatsRight"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:divider="@null"/>
         </LinearLayout>
-
-        <TextView android:layout_width="match_parent" android:layout_height="40dp"
-                  android:text="@string/attacks"
-                  android:textAlignment="center"
-                  android:gravity="center"
-        android:textSize="16sp"/>
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvAttacks"
-                android:layout_width="match_parent" android:layout_height="match_parent"/>
-
     </LinearLayout>
-</FrameLayout>
+
+    <TextView android:layout_width="match_parent"
+              android:layout_height="40dp"
+              android:text="@string/attacks"
+              android:textAlignment="center"
+              android:gravity="center"
+              android:textSize="16sp"
+              android:background="@android:color/black"
+              android:textColor="@android:color/white"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvAttacks"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"/>
+
+</LinearLayout>
